--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <header>
         <nav>
             <ul>
+                <li><a class="introduction" href="#introduction">Introduction</a></li>
                 <li><a class="home" href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="work">Work</a></li>
+                <li><a class="about" href="#about">About</a></li>
+                <li><a class="contact" href="#contact">Contact</a></li>
+                <li><a class="work" href="#work">Work</a></li>
             </ul>
         </nav>
     </header>
