eerste stuk hoofdtekst + afbeeldingen

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         </nav>
     </header>
     <main>
-        
+        <section class="hoofdtekstenfotos">
+            <div class="stuk1">
+                <p>Software <br> Developer</p>
+                <img src="img/image 19.png" alt="eersteplaatje" height="287px" width="584px">
+                <p>Tim <br> de Rijck</p>
+            </div>
+        </section>
     </main>
     <footer>
         
