--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="flex">
                 <li><a class="introduction" href="#introduction">Introduction</a></li>
                 <li><a class="home" href="#home">Home</a></li>
                 <li><a class="about" href="#about">About</a></li>
@@ -18,10 +18,17 @@
     </header>
     <main>
         <section class="hoofdtekstenfotos">
-            <div class="stuk1">
+            <div class="intro1 flex">
                 <p>Software <br> Developer</p>
                 <img src="img/image 19.png" alt="eersteplaatje" height="287px" width="584px">
                 <p>Tim <br> de Rijck</p>
+            </div>
+            <div class="intro2 intro1 flex">
+                <div class="introdeel2 flex">
+                    <img src="img/image 18.png" alt="tweedeplaatje" height="287px" width="584px">
+                    <p>Welcome!</p>
+                    <img src="img/image.png" alt="derdeplaatje" height="287px" width="584px">
+                </div>
             </div>
         </section>
     </main>
