footer gemaakt, nog bijwerkingen nodig, hoofdpagina af

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
             <ul class="flex">
-                <li><a class="introduction" href="#introduction">Introduction</a></li>
-                <li><a class="home" href="#home">Home</a></li>
-                <li><a class="about" href="#about">About</a></li>
-                <li><a class="contact" href="#contact">Contact</a></li>
-                <li><a class="work" href="#work">Work</a></li>
+                <li><a class="home" href="index.html">Home</a></li>
+                <li><a class="introduction" href="introduction.html">Introduction</a></li>
+                <li><a class="about" href="about.html">About</a></li>
+                <li><a class="contact" href="contact.html">Contact</a></li>
+                <li><a class="work" href="work.html">Work</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +35,26 @@
         </section>
     </main>
     <footer>
-        
+        <section class="footertekst flex">
+            <div class="footertekst1 flex">
+                You can reach me at:
+            </div>
+            <div class="footerinfo flex">
+                <div class="footerinfo1">
+                    <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                    06-11087321
+                </div>
+                <div class="footerinfo2">
+                    <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                    Kloosterweg 33
+                </div>
+                <div class="footerinfo3">
+                    <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                    timderijck2@gmail.com
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
+
 </html>
