Introduction page toegevoegd

--- a/introduction.html
+++ b/introduction.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
-    <link rel="stylesheet" href="">
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,11 +20,56 @@
     </header>
     <main>
         <section class="homehoofdtekst flex ">
-            Introduction
+            <div class="introductiontekst flex">
+                Introduction
+            </div>
+            <div class="introductieinfo flex">
+                <div class="introafbeelding1">
+                    <img src="img/image (2).png" alt="introplaatje" width="500px" height="300px">
+                </div>
+                <div class="introtekstalgemeen flex">
+                    <div class="introtekst1">
+                        My Portfolio
+                    </div>
+                    <div class="introtekst2">
+                        Hello, welcome to my portfolio!
+                    </div>
+                    <div class="introtekst3 introtekst2">
+                        In my portfolio you will find:
+                    </div>
+                    <div class="introtekst4 introtekst2">
+                        • Things about me, who I am, <br> and where I’m from. <br>
+                        • What I am currently studying. <br>
+                        • How you can contact me <br>
+                        • Connections: What I did <br>
+                        before this and what I plan 
+                        to <br> do in the future. 
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-        
+        <section class="footertekst flex">
+            <div class="footertekst1 flex">
+                You can reach me at:
+            </div>
+            <div class="footerinfo flex">
+                <div class="footerinfo1">
+                    <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                    06-11087321
+                </div>
+                <div class="footerinfo2">
+                    <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                    Kloosterweg 33
+                </div>
+                <div class="footerinfo3">
+                    <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                    timderijck2@gmail.com
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
+
 </html>
