--- a/about.html
+++ b/about.html
@@ -19,7 +19,33 @@
         </nav>
     </header>
     <main>
-        
+        <section class="homehoofdtekst flex">
+            <div class="abouthoofdtekst flex">
+                About
+            </div>
+            <div class="drierijentekst flex">
+                <div class="rij1 randjes">
+                    <img src="img/gmng.png" alt="" width="380px" height="250px">
+                    <br>I am a big gamer, <br>an introvert mostly, <br>although I do like <br>being outdoors.
+                </div>
+                <div class="rij2">
+                    <div class="rij2regel1">
+                        My name is Tim de Rijck,<br> I am 16 years old. <br>I am a software developer <br>(currently studying)
+                    </div>
+                    <div class="rij2regel2">
+                        On this page you will find:
+                    </div>
+                    <div class="rij2regel3">
+                        • Things about me <br>
+                        • What I like (doing)
+                    </div>
+                </div>
+                <div class="rij3 ">
+                    <img src="img/ntre.png" alt="" width="380px" height="250px">
+                    <br> When I do go out, <br> I love nature. <br> There’s something <br> nice about the <br> beautiful colours <br> and it being silent, <br> it lets me get peace <br> of mind.
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="footertekst flex">
