footer aangepast en contact pagina afgemaakt

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,81 @@
         </nav>
     </header>
     <main>
-        
+        <section class="homehoofdtekst flex">
+            <div class="contactpagina flex">
+                <div class="contactfoto1 textgrootte">
+                    <img src="img/contact.png" alt="" width="400px" height="350px">
+                    <div class="phonetekst">
+                        <br> Phone number:
+                        <div class="phonenumber">
+                            06-11087321
+                        </div>
+                        <div class="formafbeelding1">
+                            <img src="img/form1 (1).png" alt="" height="200px" width="350px">
+                        </div>
+                    </div>
+                </div>
+                <div class="textonderdelencontact">
+                    <div class="contacthoofdtekst contact flex">
+                        Contact
+                    </div>
+                    <div class="youwillfind textgrootte">
+                        On this page you will find:
+                    </div>
+                    <div class="wayscontact textgrootte flex rij2regel1">
+                        • Ways to contact me
+                    </div>
+                    <div class="maindetails textgrootte">
+                        My main details are found <br> in the footer below, <br> but for reference again:
+                    </div>
+                    <div class="hometekst textgrootte">
+                        Home:
+                        <div class="adres flex">
+                            <br> Kloosterweg 33
+                        </div>
+                        <div class="morequestions adres">
+                            For more questions, <br> please fill in the form <br> below:
+                        </div>
+                        <section class="formulier">
+                            <div class="formuliercontainer">
+                                <div class="formulierinhoudcontainer">
+                                    <div class="smallpadding containernieuw flex">
+                                        <input type="container1" name="name" id="container1" style="width: 310px; height: 30px;"
+                                        placeholder="Your name">
+                                    </div>
+                                    <div class="smallpadding containernieuw flex">
+                                        <input type="container1" name="name" id="container1" style="width: 310px; height: 30px;"
+                                        placeholder="Your E-mail">
+                                    </div>
+                                    <div class="smallpadding containernieuw flex">
+                                        <input type="container1" name="name" id="container1" style="width: 310px; height: 130px;"
+                                        placeholder="Subject">
+                                    </div>
+                                    <div class="container4 container1 borderradius">
+                                        Send
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="vrijeruimte">
+
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div class="contactfoto2">
+                    <img src="img/contact2.png" alt="" width="490px" height="350px">
+                    <div class="emailtekst textgrootte">
+                        E-mail:
+                        <div class="email adres">
+                            timderijck2@gmail.com
+                        </div>
+                        <div class="formafbeelding2">
+                            <img src="img/form2.png" alt="" height="200px" width="350px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="footertekst flex">
@@ -27,17 +101,29 @@
                 You can reach me at:
             </div>
             <div class="footerinfo flex">
-                <div class="footerinfo1">
-                    <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
-                    06-11087321
+                <div class="footerinfo1 kleineruimte">
+                    <div class="footerafbeelding flex">
+                        <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                    </div>
+                    <div class="footerinfotekst">
+                        06-11087321
+                    </div>
                 </div>
                 <div class="footerinfo2">
-                    <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
-                    Kloosterweg 33
+                    <div class="footerafbeelding flex rechtsruimte">
+                        <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                    </div>
+                    <div class="footerinfotekst">
+                        Kloosterweg 33
+                    </div>
                 </div>
                 <div class="footerinfo3">
-                    <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
-                    timderijck2@gmail.com
+                    <div class="footerafbeelding">
+                        <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                    </div>
+                    <div class="footerinfotekst foottekst flex">
+                        timderijck2@gmail.com
+                    </div>
                 </div>
             </div>
         </section>
