--- a/introduction.html
+++ b/introduction.html
@@ -55,17 +55,29 @@
                 You can reach me at:
             </div>
             <div class="footerinfo flex">
-                <div class="footerinfo1">
-                    <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
-                    06-11087321
+                <div class="footerinfo1 kleineruimte">
+                    <div class="footerafbeelding flex">
+                        <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                    </div>
+                    <div class="footerinfotekst">
+                        06-11087321
+                    </div>
                 </div>
                 <div class="footerinfo2">
-                    <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
-                    Kloosterweg 33
+                    <div class="footerafbeelding flex rechtsruimte">
+                        <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                    </div>
+                    <div class="footerinfotekst">
+                        Kloosterweg 33
+                    </div>
                 </div>
                 <div class="footerinfo3">
-                    <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
-                    timderijck2@gmail.com
+                    <div class="footerafbeelding">
+                        <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                    </div>
+                    <div class="footerinfotekst foottekst flex">
+                        timderijck2@gmail.com
+                    </div>
                 </div>
             </div>
         </section>
