work pagina afgemaakt

--- a/work.html
+++ b/work.html
@@ -19,7 +19,52 @@
         </nav>
     </header>
     <main>
-        
+        <section class="workpagina flex">
+            <div class="linkerkant position">
+                <div class="eersteworkfoto fotopadding">
+                    <img src="img/eclogo.png" alt="" height="250px" width="330px">
+                </div>
+                <div class="eerstetekstlinks textgrootte white">
+                    I studied at the <br> Elzendaalcollege in <br> Gennep before this. <br> I graduated there <br> with a mavo-degree.
+                </div>
+                <div class="tweedetekstlinks textgrootte white">
+                    In my 1st year I <br> wasn’t there yet, <br> I was at a different <br> location, Boxmeer, <br> but it didn’t really <br> work out there.
+                </div>
+            </div>
+            <div class="middeltekst">
+                <div class="worktekst">
+                    Work
+                </div>
+                <div class="youwillfind2 position">
+                    On this page you will find:
+                </div>
+                <div class="driedingen textgrootte white position">
+                    • What/where I am currently studying. <br>
+                    • What I did before this. <br>
+                    • What I plan to do in the future.
+                </div>
+                <div class="futuretekst youwillfind2 position">
+                    I don’t know what I plan to <br> do in the future just yet, <br> but I am thinking about <br> working on code myself and <br> see how far my creativity <br> can go.
+                </div>
+                <div class="thanks position">
+                    Thanks for visiting my portfolio!
+                </div>
+            </div>
+            <div class="rechterkant position">
+                <div class="tweedeworkfoto fotopadding">
+                    <img src="img/roclogo.png" alt="" height="260px" width="375px">
+                </div>
+                <div class="eerstetekstrechts textgrootte white kleinepaddingruimte">
+                    I am currently studying <br> software development at <br> ROC Nijmegen.
+                </div>
+                <div class="tweedetekstrechts textgrootte white kleinepaddingruimte">
+                    So far I have learned <br> 2-3 coding languages, <br> mainly Java, CSS and <br> JavaScript. 
+                </div>
+                <div class="laatstetekstrechts textgrootte white">
+                    I have remade 1 website <br> before`called PinkGoose <br> and recreateda game <br> called MasterMind in Java. Based <br> on the real game <br> MasterMind.
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="footertekst flex">
