dingen gecorrect en errors eruitgewerkt

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>About</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 </head>
@@ -25,7 +26,7 @@
             </div>
             <div class="drierijentekst flex">
                 <div class="rij1 randjes">
-                    <img src="img/gmng.png" alt="" width="380px" height="250px">
+                    <img src="img/gmng.png" alt="" width="380" height="250">
                     <br>I am a big gamer, <br>an introvert mostly, <br>although I do like <br>being outdoors.
                 </div>
                 <div class="rij2">
@@ -41,7 +42,7 @@
                     </div>
                 </div>
                 <div class="rij3 ">
-                    <img src="img/ntre.png" alt="" width="380px" height="250px">
+                    <img src="img/ntre.png" alt="" width="380" height="250">
                     <br> When I do go out, <br> I love nature. <br> There’s something <br> nice about the <br> beautiful colours <br> and it being silent, <br> it lets me get peace <br> of mind.
                 </div>
             </div>
@@ -55,7 +56,7 @@
             <div class="footerinfo flex">
                 <div class="footerinfo1 kleineruimte">
                     <div class="footerafbeelding flex">
-                        <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/phone.png" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         06-11087321
@@ -63,7 +64,7 @@
                 </div>
                 <div class="footerinfo2">
                     <div class="footerafbeelding flex rechtsruimte">
-                        <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/house.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         Kloosterweg 33
@@ -71,7 +72,7 @@
                 </div>
                 <div class="footerinfo3">
                     <div class="footerafbeelding">
-                        <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/mail.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst foottekst flex">
                         timderijck2@gmail.com
