--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 </head>
@@ -22,14 +23,14 @@
         <section class="homehoofdtekst flex">
             <div class="contactpagina flex">
                 <div class="contactfoto1 textgrootte">
-                    <img src="img/contact.png" alt="" width="400px" height="350px">
+                    <img src="img/contact.png" alt="" width="400" height="350">
                     <div class="phonetekst">
                         <br> Phone number:
                         <div class="phonenumber">
                             06-11087321
                         </div>
                         <div class="formafbeelding1">
-                            <img src="img/form1 (1).png" alt="" height="200px" width="350px">
+                            <img src="img/form1(1).png" alt="" height="200" width="350">
                         </div>
                     </div>
                 </div>
@@ -58,15 +59,15 @@
                             <div class="formuliercontainer">
                                 <div class="formulierinhoudcontainer">
                                     <div class="smallpadding containernieuw flex">
-                                        <input type="container1" name="name" id="container1" style="width: 310px; height: 30px;"
+                                        <input type="email" name="name" id="name1"
                                         placeholder="Your name">
                                     </div>
                                     <div class="smallpadding containernieuw flex">
-                                        <input type="container1" name="name" id="container1" style="width: 310px; height: 30px;"
+                                        <input type="email" name="name" id="name2"
                                         placeholder="Your E-mail">
                                     </div>
-                                    <div class="smallpadding containernieuw flex">
-                                        <input type="container1" name="name" id="container1" style="width: 310px; height: 130px;"
+                                    <div class="smallpadding containernieuw grotebox flex">
+                                        <input type="email" name="name" id="name3"
                                         placeholder="Subject">
                                     </div>
                                     <div class="container4 container1 borderradius">
@@ -81,14 +82,14 @@
                     </div>
                 </div>
                 <div class="contactfoto2">
-                    <img src="img/contact2.png" alt="" width="490px" height="350px">
+                    <img src="img/contact2.png" alt="" width="490" height="350">
                     <div class="emailtekst textgrootte">
                         E-mail:
                         <div class="email adres">
                             timderijck2@gmail.com
                         </div>
                         <div class="formafbeelding2">
-                            <img src="img/form2.png" alt="" height="200px" width="350px">
+                            <img src="img/form2.png" alt="" height="200" width="350">
                         </div>
                     </div>
                 </div>
@@ -103,7 +104,7 @@
             <div class="footerinfo flex">
                 <div class="footerinfo1 kleineruimte">
                     <div class="footerafbeelding flex">
-                        <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/phone.png" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         06-11087321
@@ -111,7 +112,7 @@
                 </div>
                 <div class="footerinfo2">
                     <div class="footerafbeelding flex rechtsruimte">
-                        <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/house.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         Kloosterweg 33
@@ -119,7 +120,7 @@
                 </div>
                 <div class="footerinfo3">
                     <div class="footerafbeelding">
-                        <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/mail.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst foottekst flex">
                         timderijck2@gmail.com
