--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 </head>
@@ -22,14 +23,14 @@
         <section class="hoofdtekstenfotos">
             <div class="intro1 flex">
                 <p>Software <br> Developer</p>
-                <img src="img/image 19.png" alt="eersteplaatje" height="287px" width="584px">
+                <img src="img/image19.png" alt="eersteplaatje" height="287" width="584">
                 <p>Tim <br> de Rijck</p>
             </div>
             <div class="intro2 intro1 flex">
                 <div class="introdeel2 flex">
-                    <img src="img/image 18.png" alt="tweedeplaatje" height="287px" width="584px">
+                    <img src="img/image18.png" alt="tweedeplaatje" height="287" width="584">
                     <p>Welcome!</p>
-                    <img src="img/image.png" alt="derdeplaatje" height="287px" width="584px">
+                    <img src="img/image.png" alt="derdeplaatje" height="287" width="584">
                 </div>
             </div>
         </section>
@@ -42,7 +43,7 @@
             <div class="footerinfo flex">
                 <div class="footerinfo1 kleineruimte">
                     <div class="footerafbeelding flex">
-                        <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/phone.png" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         06-11087321
@@ -50,7 +51,7 @@
                 </div>
                 <div class="footerinfo2">
                     <div class="footerafbeelding flex rechtsruimte">
-                        <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/house.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         Kloosterweg 33
@@ -58,7 +59,7 @@
                 </div>
                 <div class="footerinfo3">
                     <div class="footerafbeelding">
-                        <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/mail.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst foottekst flex">
                         timderijck2@gmail.com
