--- a/introduction.html
+++ b/introduction.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Introduction</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 </head>
@@ -25,7 +26,7 @@
             </div>
             <div class="introductieinfo flex">
                 <div class="introafbeelding1">
-                    <img src="img/image (2).png" alt="introplaatje" width="500px" height="300px">
+                    <img src="img/image(2).png" alt="introplaatje" width="500" height="300">
                 </div>
                 <div class="introtekstalgemeen flex">
                     <div class="introtekst1">
@@ -57,7 +58,7 @@
             <div class="footerinfo flex">
                 <div class="footerinfo1 kleineruimte">
                     <div class="footerafbeelding flex">
-                        <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/phone.png" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         06-11087321
@@ -65,7 +66,7 @@
                 </div>
                 <div class="footerinfo2">
                     <div class="footerafbeelding flex rechtsruimte">
-                        <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/house.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         Kloosterweg 33
@@ -73,7 +74,7 @@
                 </div>
                 <div class="footerinfo3">
                     <div class="footerafbeelding">
-                        <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/mail.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst foottekst flex">
                         timderijck2@gmail.com
