--- a/work.html
+++ b/work.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Work</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
 </head>
@@ -22,7 +23,7 @@
         <section class="workpagina flex">
             <div class="linkerkant position">
                 <div class="eersteworkfoto fotopadding">
-                    <img src="img/eclogo.png" alt="" height="250px" width="330px">
+                    <img src="img/eclogo.png" alt="" height="250" width="330">
                 </div>
                 <div class="eerstetekstlinks textgrootte white">
                     I studied at the <br> Elzendaalcollege in <br> Gennep before this. <br> I graduated there <br> with a mavo-degree.
@@ -52,7 +53,7 @@
             </div>
             <div class="rechterkant position">
                 <div class="tweedeworkfoto fotopadding">
-                    <img src="img/roclogo.png" alt="" height="260px" width="375px">
+                    <img src="img/roclogo.png" alt="" height="260" width="375">
                 </div>
                 <div class="eerstetekstrechts textgrootte white kleinepaddingruimte">
                     I am currently studying <br> software development at <br> ROC Nijmegen.
@@ -74,7 +75,7 @@
             <div class="footerinfo flex">
                 <div class="footerinfo1 kleineruimte">
                     <div class="footerafbeelding flex">
-                        <img src="img/phone.png" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/phone.png" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         06-11087321
@@ -82,7 +83,7 @@
                 </div>
                 <div class="footerinfo2">
                     <div class="footerafbeelding flex rechtsruimte">
-                        <img src="img/house.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/house.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst">
                         Kloosterweg 33
@@ -90,7 +91,7 @@
                 </div>
                 <div class="footerinfo3">
                     <div class="footerafbeelding">
-                        <img src="img/mail.jpg" alt="footerplaatje" width="40px" height="40px">
+                        <img src="img/mail.jpg" alt="footerplaatje" width="40" height="40">
                     </div>
                     <div class="footerinfotekst foottekst flex">
                         timderijck2@gmail.com
